# macaroni

./: AsyncWrapper.cpp  AsyncWrapper.h  BasePanel.cpp  BasePanel.h  CMakeLists.txt  ClientPanel.cpp  ClientPanel.h  ClientPipe.cpp  ClientPipe.h  ServerPanel.cpp  ServerPanel.h  ServerPipe.cpp  ServerPipe.h  main-client.cpp  main-server.cpp
the_framework/: CMakeLists.txt  HandleHolder.cpp  HandleHolder.h  Screen.cpp  Screen.h  colors.h  utils.cpp  utils.h
