set(SOURCES
        colors.h
        EditableText.cpp
        EditableText.h
        HandleHolder.cpp
        HandleHolder.h
        LineEdit.cpp
        LineEdit.h
        Lines.cpp
        Lines.h
        MessagePopup.cpp
        MessagePopup.h
        Popup.cpp
        Popup.h
        Screen.cpp
        Screen.h
        utils.cpp
        utils.h
)

add_library(frmwrk ${SOURCES})
